fixed some mistakes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 $item-bg-color: #eee;
 $calendar-item-size: 100px;
 $calendar-gap: 1px;
-$calendar-item-width: calc(#{$calendar-item-size} + #{$calendar-gap});
+$calendar-item-width: $calendar-item-size + $calendar-gap;
 $week: (
   'mon': 0,
   'tue': 1,
@@ -42,16 +42,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition-duration: 0.5s;
 
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translateY(-20px);
-      transition-duration: 0.5s;
     }
   }
 
-  @for $dayNumber from 0 through 31 {
+  @for $dayNumber from 1 through 31 {
     :nth-child(n + #{$dayNumber})::before {
       content: '#{$dayNumber}';
     }
