--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid white;
+  box-sizing: border-box;
   padding: $calendar-padding;
   width: calc((7 * $day-size) + (6 * $day-gap) + (2 * $calendar-padding));
   gap: $day-gap;
@@ -21,7 +21,7 @@ body {
   position: relative;
   width: $day-size;
   height: $day-size;
-  
+  box-sizing: border-box;
   border: $day-border;
   background-color: $day-color;
 
