--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $day-size: 100px;
 $day-color: #eee;
-$day-hover-color: pink;
+$day-hover-color: #FFBFCB;
 $day-border: 1px solid black;
 $day-gap: 1px;
 $calendar-padding: 10px;
