--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,73 +1,3 @@
-$days-of-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
-$cell-width: 100px;
-$gap: 1px;
-
-@each $day, $index in $days-of-week {
-  .calendar--start-day-#{$day} .calendar__day:nth-child(1) {
-    margin-left: calc(($cell-width + $gap) * $index);
-  }
-}
-
-html {
-  font-family: Arial, sans-serif;
-  font-style: normal;
-  font-size: 30px;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: 714px;
-  box-sizing: border-box;
-  margin: 80px 160 0;
-  gap: $gap;
-}
-
-.calendar__day {
-  box-sizing: border-box;
-  height: 100px;
-  width: 100px;
-  border: 1px solid black;
-  background-color: #eee;
-  transition: all 0.5s linear;
-  padding: 0;
-  margin: 0;
-}
-
-.calendar__day:hover {
-  background-color: #ffbfcb;
-  cursor: pointer;
-  transform: translateY(-20px);
-}
-
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: '#{$i}';
-    display: block;
-    text-align: center;
-    line-height: 100px;
-  }
-}
-
-@for $i from 28 through 31 {
-  .calendar--month-length-#{$i} {
-    .calendar__day:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
-  }
-}
+@import './block/cycleVariable';
+@import './block/main';
+@import './block/calendar';
