--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@ $start-day: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,7 +32,7 @@ body {
     border: solid 1px #000;
     position: relative;
     transition: 0.5s;
-    
+
     &:hover {
       cursor: pointer;
       transform: translateY(-20px);
@@ -42,14 +43,17 @@ body {
   @for $day from 1 through 31 {
     &__day:nth-child(#{$day})::before {
       content: '#{$day}';
-      font-size: 30px;
-      position: absolute;
-      color: black;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
+
+      @extend %number;
     }
   }
+}
+%number {
+  position: absolute;
+  color: black;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @each $day, $number in $start-day {
