fixed task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 
 body {
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
 
   @include flex-center;
 }
@@ -25,7 +25,9 @@ body {
 
     background-color: $day-bg-color;
     border: 1px solid #000;
-    transition: background-color transform 0.5s;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
 
     &::before {
       @include flex-center;
