--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ $gap: 1px;
 
 .calendar {
   display: flex;
-  width: calc((7 * $column-width) + (6 * 1px));
+  width: calc((7 * $column-width) + (6 * $gap));
   flex-wrap: wrap;
   gap: $gap;
   box-sizing: border-box;
@@ -33,7 +33,6 @@ $gap: 1px;
       transform: translate(0, -20px);
       cursor: pointer;
       background-color: #ffbfcb;
-      transition: transform 300ms;
     }
   }
 
