--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,59 +5,61 @@ $days-of-week: (
   thu: 3,
   fri: 4,
   sat: 5,
-  sun: 6,
+  sun: 6
 );
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .calendar {
   width: 707px;
   display: flex;
   flex-wrap: wrap;
-
-
+  gap: 1px;
   &__day {
-    padding: 10px;
     display: flex;
     box-sizing: border-box;
     height: 100px;
     width: 100px;
     background-color: #eee;
     border: 1px solid black;
-    gap: 1px;
+
     font-size: 30px;
     align-items: center;
     justify-content: center;
     transition: 0.5s;
-  };
+  }
 
   &__day:hover {
     cursor: pointer;
     background-color: #ffbfcb;
     transform: translate(0, -20px);
-  };
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+    &__day:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
+
+@each $day, $index in $days-of-week {
+  &--start-day-#{$day}
+  &__day:nth-child(1) {
+  margin-left: $index * 101px;
+  }
+}
+
+
 
   @for $i from 1 through 31 {
     &__day:nth-child(#{$i})::before {
       content: '#{$i}';
     }
-  };
-}
-
-@for $i from 28 through 31 {
-  .calendar--month-length-#{$i} {
-  .calendar__day:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
   }
 }
 
-@each $day, $index in $days-of-week {
-  .calendar--start-day-#{$day}
-  .calendar__day:nth-child(1) {
-    margin-left: $index * 100px;
-  }
-}
