fixed layout calendar

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -22,7 +22,7 @@
     background-color: $day-bg-color;
     width: $day-size;
     height: $day-size;
-    border: 1px solid black;
+    border: $day-border;
     position: relative;
     cursor: pointer;
     transition-duration: 0.5s;
