--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -47,7 +47,7 @@ body {
   }
 }
 
-@each $day, $margin in (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6)
+@each $day, $margin in $days
 {
   .calendar--start-day-#{$day} {
     .calendar__day:first-child {
