--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,4 @@ $background-color: #eee;
 $font-size: 30px;
 $hover-color: #ffbfcb;
 $animation-duration: 0.5s;
+$days: (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6);
