--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,3 @@
-$item-bg-color: #eee;
-$calendar-item-size: 100px;
-$calendar-gap: 1px;
-$calendar-item-width: $calendar-item-size + $calendar-gap;
-$week: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sat': 5,
-  'sun': 6,
-);
-
 * {
   margin: 0;
   padding: 0;
@@ -33,7 +19,7 @@ body {
   gap: $calendar-gap;
   width: calc($calendar-item-width * 7);
 
-  &__item {
+  &__day {
     box-sizing: border-box;
     background-color: $item-bg-color;
     height: $calendar-item-size;
