--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,7 +34,7 @@ body {
     }
 
     @for $i from 1 through 31 {
-      &:nth-child(n + #{$i})::before {
+      &:nth-child(#{$i})::before {
         content: '#{$i}';
       }
     }
