--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,10 +13,10 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $width;
+  width: ($size-day * 7) + ($size-gap * 6);
   gap: $size-gap;
 
-  &_day {
+  &__day {
     display: flex;
     height: $size-day;
     width: $size-day;
