--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import './variables';
 
+// Загальні стилі для сторінки
 body {
   margin: 0;
   display: flex;
@@ -19,7 +20,9 @@ body {
 }
 
 .calendar__day {
-  display: flex;
+  display: flex; /* Вирівнювання по центру */
+  justify-content: center; /* Вирівнювання по горизонталі */
+  align-items: center; /* Вирівнювання по вертикалі */
   position: relative;
   height: $day-size;
   width: $day-size;
@@ -28,8 +31,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: $font-size;
   border: solid $border-size black;
-  justify-content: center;
-  align-items: center;
   transition:
     background-color $animation-duration,
     transform $animation-duration;
@@ -41,24 +42,23 @@ body {
   }
 }
 
+// Генерація номерів днів
 @for $i from 1 through 31 {
   .calendar__day:nth-child(#{$i})::before {
     content: '#{$i}';
   }
 }
 
+// Генерація відступів для перших днів тижня
 @each $day, $margin in $days {
-  .calendar--start-day-#{$day} {
-    .calendar__day:first-child {
-      margin-left: calc(#{$margin} * ($day-size + $gap));
-    }
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: $margin * ($day-size + $gap);
   }
 }
 
+// Приховування зайвих днів для місяців з меншим числом днів
 @for $i from 28 through 31 {
-  .calendar--month-length-#{$i} {
-    .calendar__day:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
+  .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+    display: none;
   }
 }
