--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable import-notation */
+@use 'sass:list';
 @import './variables';
 
 .page {
@@ -50,47 +52,61 @@
     }
   }
 
-  &--start-day-sun {
-    .calendar__day:nth-child(1) {
-      margin-left: calc(6 * #{$calendar-size} + 6 * #{$calendar-gap});
+  @for $i from 0 through 6 {
+    $day-name: list.nth(mon tue wed thu fri sat sun, $i + 1);
+
+    &--start-day-#{$day-name} {
+      .calendar__day:nth-child(1) {
+        @if $i == 1 {
+          margin-left: 0;
+        } @else {
+          margin-left: calc(#{$i} * $calendar-size + #{$i} * $calendar-gap);
+        }
+      }
     }
   }
 
-  &--start-day-mon {
-    .calendar__day:nth-child(1) {
-      margin-left: 0;
-    }
-  }
+  // &--start-day-sun {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: calc(6 * #{$calendar-size} + 6 * #{$calendar-gap});
+  //   }
+  // }
 
-  &--start-day-tue {
-    .calendar__day:nth-child(1) {
-      margin-left: calc(1 * #{$calendar-size} + 1 * #{$calendar-gap});
-    }
-  }
+  // &--start-day-mon {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: 0;
+  //   }
+  // }
 
-  &--start-day-wed {
-    .calendar__day:nth-child(1) {
-      margin-left: calc(2 * #{$calendar-size} + 2 * #{$calendar-gap});
-    }
-  }
+  // &--start-day-tue {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: calc(1 * #{$calendar-size} + 1 * #{$calendar-gap});
+  //   }
+  // }
 
-  &--start-day-thu {
-    .calendar__day:nth-child(1) {
-      margin-left: calc(3 * #{$calendar-size} + 3 * #{$calendar-gap});
-    }
-  }
+  // &--start-day-wed {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: calc(2 * #{$calendar-size} + 2 * #{$calendar-gap});
+  //   }
+  // }
 
-  &--start-day-fri {
-    .calendar__day:nth-child(1) {
-      margin-left: calc(4 * #{$calendar-size} + 4 * #{$calendar-gap});
-    }
-  }
+  // &--start-day-thu {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: calc(3 * #{$calendar-size} + 3 * #{$calendar-gap});
+  //   }
+  // }
 
-  &--start-day-sat {
-    .calendar__day:nth-child(1) {
-      margin-left: calc(5 * #{$calendar-size} + 5 * #{$calendar-gap});
-    }
-  }
+  // &--start-day-fri {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: calc(4 * #{$calendar-size} + 4 * #{$calendar-gap});
+  //   }
+  // }
+
+  // &--start-day-sat {
+  //   .calendar__day:nth-child(1) {
+  //     margin-left: calc(5 * #{$calendar-size} + 5 * #{$calendar-gap});
+  //   }
+  // }
 
   @for $i from 28 through 31 {
     &--month-length-#{$i} {
