fix a another problems

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,9 @@ $background-color: #eee;
 $font-size: 30px;
 $hover-color: #ffbfcb;
 $animation-duration: 0.5s;
+$left-margin: 1rem;
+$border-color: black;
+$translate-y: -20px;
 $days: (
   mon: 0,
   tue: 1,
