--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,12 @@
 @import './variables';
 
+// Застосування border-box для всіх елементів
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 // Загальні стилі для сторінки
 body {
   margin: 0;
@@ -7,12 +14,12 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  box-sizing: border-box;
   width: calc(7 * $day-size + 6 * $gap + 2 * $padding);
   margin: 0 auto;
   gap: $gap;
@@ -26,18 +33,16 @@ body {
   position: relative;
   height: $day-size;
   width: $day-size;
-  box-sizing: border-box;
   background-color: $background-color;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: $font-size;
-  border: solid $border-size black;
+  border: solid $border-size $border-color; /* Використання змінної кольору рамки */
   transition:
     background-color $animation-duration,
     transform $animation-duration;
 
   &:hover {
     cursor: pointer;
-    transform: translateY(-20px);
+    transform: translateY($translate-y); /* Використання змінної translateY */
     background-color: $hover-color;
   }
 }
@@ -51,8 +56,9 @@ body {
 
 // Генерація відступів для перших днів тижня
 @each $day, $margin in $days {
+  $margin-left: $margin * ($day-size + $gap); // Обчислення лівого відступу
   .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: $margin * ($day-size + $gap);
+    margin-left: $margin-left; // Використання змінної
   }
 }
 
