Added changing  the cursor

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,7 @@ body {
   transition-duration: 0.5s;
 
   &:hover {
+    cursor: pointer;
     transform: translateY(-20px);
     background-color: #ffbfcb;
   }
