add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@
   margin: 0;
   height: 100vh;
 
-  @include flex-block;
+  @include cadendar-centered-content;
 }
 
 .calendar {
@@ -16,8 +16,8 @@
   padding: 10px;
 
   &__day {
-    @include flex-block;
-    @include text-style;
+    @include cadendar-centered-content;
+    @include calendar-font-styles;
 
     width: $day-width;
     height: $day-width;
