--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,11 +1,11 @@
-@mixin flex-block {
+@mixin cadendar-centered-content {
   display: flex;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
 }
 
-@mixin text-style {
+@mixin calendar-font-styles {
   font-family: Arial, sans-serif;
   font-size: 30px;
 }
