--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,12 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   font-size: var(--font-size);
 }
@@ -26,13 +32,13 @@ body {
 }
 
 $start-day: (
-  'mon': 1,
-  'tue': 2,
-  'wed': 3,
-  'thu': 4,
-  'fri': 5,
-  'sat': 6,
-  'sun': 0,
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
 );
 $month-lengths: (28, 29, 30, 31);
 $default-length: 31;
@@ -63,7 +69,7 @@ $default-length: 31;
 }
 
 @each $day, $index in $start-day {
-  .calendar--start-day-#{$day} .calendar__day {
+  .calendar--start-day-#{$day} .calendar__day:nth-child(1) {
     margin-left: calc(
       var(--one-day-box-size) * #{$index} + var(--gap-between) * #{$index}
     );
