--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,7 +40,7 @@ body {
   flex-wrap: wrap;
   gap: var(--gap-between);
   padding: var(--padding-around);
-  width: calc((var(--one-day-box-size) * 7) + (var(--gap-between) * 6) + (var(--padding-around) * 2));
+  width: calc((100px * 7) + (1px * 6) + (10px * 2));
 }
 
 .calendar__day {
