--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 $days: 31;
 $month-length: (28, 29, 30, 31);
-$start-day: (mon, thu, wed, thu, fri, sat, sun);
+$start-day: (mon 1, thu 2, wed 3, thu 4, fri 5, sat 6, sun 7);
 $gap: 1px;
 $cell-size: 100px;
 
@@ -12,12 +12,6 @@ body {
   min-height: 100vh;
   font-family: Arial, sans-serif;
   font-size: 30px;
-}
-
-@for $i from 1 through $days {
-  .calendar__day:nth-child(#{$i})::before {
-    content: '#{$i}';
-  }
 }
 
 .calendar {
@@ -44,8 +38,24 @@ body {
       transform: translate(0, -20px);
     }
   }
-}
 
-.calendar__day:first-child {
-  margin-left: 606px;
+  @for $i from 1 through $days {
+    &__day:nth-child(#{$i})::before {
+      content: '#{$i}';
+    }
+  }
+
+  @each $day, $position in $start-day {
+    &--start-day-#{$day} {
+      &__day:first-child {
+        margin-left: ($cell-size + 1px) * $position;
+      }
+    }
+  }
+
+  @for $length from 28 through 30 {
+    &-length-#{$length} &__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
 }
