--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -2,6 +2,8 @@ $widthDay: 100px;
 $heightDay: $widthDay;
 $marginBetweenDays: 1px;
 $backgroundDay: #eee;
+$backgroundHover: #ffbfcb;
+$colorBorder: #000;
 $fontSize: 0.3 * $widthDay;
 $widthCalendar: $widthDay * 7 + $marginBetweenDays * 7;
 $daysOfWeek: (
