--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
   gap: 1px;
   padding: $calendar-padding;
-  width: (7 * $cell-size) + (6 * $cell-gap);
+  width: $calendar-width;
 
   &__day {
     width: $cell-size;
@@ -37,6 +37,9 @@
     }
   }
 }
+
+
+
 
 @for $day_of_mun from 1 through 31 {
   .calendar__day:nth-child(#{$day_of_mun}):before {
