--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $cell-border-color: #000;
 $hover-color: #ffbfcb;
 $cell-size: 100px;
 $cell-border: 1px solid $cell-border-color;
-$calendar-padding: 10px;
 $cell-gap: 1px;
+$calendar-padding: 10px;
+$calendar-width: (7 * $cell-size) + (6 * $cell-gap);
 $days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
