--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,24 +13,19 @@ body {
   margin: auto;
   flex-wrap: wrap;
   gap: $base-gap;
-  width: ($square-size * 7) + ($base-gap * 6);
+  width: ($square-size * $days-in-week) + ($base-gap * ($days-in-week - 1));
   padding: 10px;
 
   &__day {
     box-sizing: border-box;
     display: flex;
+    align-items: center;
+    justify-content: center;
     height: $square-size;
     width: $square-size;
     background-color: $square-color;
     border: 1px solid black;
     transition: 500ms;
-
-    &::before {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: auto;
-    }
 
     &:hover {
       background-color: $square-color-hover;
