--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,3 +3,4 @@ $square-color: #eee;
 $square-color-hover: #ffbfcb;
 $base-gap: 1px;
 $day-names: ('mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
+$days-in-week: 7;
