--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,4 +1,5 @@
-$width-boxs: 100px;
-$width-gap: 1px;
+$calendar-day-gap: 1px;
 $calendar-days: 31;
-$my-var: $width-boxs * 7 + 6 * $width-gap;
+$calendar-day-size: 100px;
+$calendar-width: $calendar-day-size * 7 + 6 * $calendar-day-gap;
+$transition-duration: 0.5s;
