--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,10 @@
   box-sizing: border-box;
   margin: 0;
 }
+
+.sections {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
