--- a/src/styles/blocks/modifiers.scss
+++ b/src/styles/blocks/modifiers.scss
@@ -1,7 +1,7 @@
 @for $day-number from 1 through 31 {
   .calendar__day:nth-child(#{$day-number})::before {
     content: '#{$day-number}';
-    color: #000;
+    color: $black-color;
     padding-left: 1px;
   }
 
