--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,13 +2,12 @@
   height: 100%;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.body {
-  margin: 0;
-  height: 100%;
 
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.page__body {
+  margin: 0;
 }
