add task solution-2

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .calendar {
   counter-reset: day-number 0;
   display: flex;
@@ -28,6 +35,7 @@
   content: counter(day-number);
   counter-increment: day-number;
   font-size: 30px;
+  font-family: Arial, sans-serif;
   color: #000;
   position: absolute;
 }
