--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,3 +1,10 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .calendar {
   counter-reset: day-number 0;
   display: flex;
@@ -26,6 +33,7 @@ h1 {
     content: counter(day-number);
     counter-increment: day-number;
     font-size: 30px;
+    font-family: Arial, sans-serif;
     color: $text-color;
     position: absolute;
   }
