--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -27,6 +27,9 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
+  transition:
+    transform $animation-duration,
+    background-color $animation-duration;
 
   // Псевдоелемент для чисел днів
   &::before {
