--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,6 +29,9 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  transition:
+    transform 0.5s,
+    background-color 0.5s;
 }
 
 .calendar__day::before {
