--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,8 +15,14 @@ $week-days: (
 );
 $start-day: 'sun';
 
-body {
+.body {
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  display: flex;
 }
 
 .calendar {
@@ -37,8 +43,6 @@ body {
     transition: transform 0.5s;
 
     &::before {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 30px;
       position: absolute;
       top: 50%;
       left: 50%;
