--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+
+  font-family: Arial, sans-serif;
 }
 
 .calendar {
@@ -20,7 +22,6 @@ body {
   width: 100px;
   background-color: #eee;
   border: 1px solid black;
-  font-family: Arial, sans-serif;
   font-size: 30px;
   line-height: 98px;
   text-align: center;
@@ -29,7 +30,6 @@ body {
 
 .calendar__day:hover {
   cursor: pointer;
-  background-color: #ffbfcb;
   transform: translateY(-20px);
 }
 
@@ -186,19 +186,19 @@ body {
 }
 
 .calendar--month-length-28 .calendar__day:nth-child(n + 29) {
-  display: none;
+  visibility: hidden;
 }
 
 .calendar--month-length-29 .calendar__day:nth-child(n + 30) {
-  display: none;
+  visibility: hidden;
 }
 
 .calendar--month-length-30 .calendar__day:nth-child(n + 31) {
-  display: none;
+  visibility: hidden;
 }
 
 .calendar--month-length-31 .calendar__day:nth-child(n + 32) {
-  display: none;
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
