--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -186,19 +186,19 @@ body {
 }
 
 .calendar--month-length-28 .calendar__day:nth-child(n + 29) {
-  visibility: hidden;
+  display: none;
 }
 
 .calendar--month-length-29 .calendar__day:nth-child(n + 30) {
-  visibility: hidden;
+  display: none;
 }
 
 .calendar--month-length-30 .calendar__day:nth-child(n + 31) {
-  visibility: hidden;
+  display: none;
 }
 
 .calendar--month-length-31 .calendar__day:nth-child(n + 32) {
-  visibility: hidden;
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
