--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,62 @@
-body {
+@import './variables';
+
+.page {
   margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  width: 100%;
+  max-width: 726px;
+  box-sizing: border-box;
+  padding: 10px;
+
+  &__space {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $gap;
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: $square-size;
+    width: $square-size;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: $square-color;
+
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-20px);
+      background-color: $square-color-hover;
+      animation-duration: 0.5s;
+    }
+  }
+}
+
+@for $number from 1 through 31 {
+  .calendar__day:nth-child(#{$number})::before {
+    content: '#{$number}';
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: $font-size;
+  }
+}
+
+@each $name, $day in $days-of-week {
+  .calendar__startDay--#{$name} .calendar__day:first-child {
+    margin-left: calc($day * 100 + $day * $gap-number);
+  }
+}
+
+@for $length from 28 through 31 {
+  .calendar__monthLength--#{$length}
+    .calendar__day:nth-last-child(-n + #{31 - $length}) {
+    visibility: hidden;
+  }
 }
