--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,7 +44,7 @@
   .calendar__day:nth-child(#{$number})::before {
     content: '#{$number}';
     font-family: Arial, Helvetica, sans-serif;
-    font-size: $font-size;
+    font-size: 30px;
   }
 }
 
