--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,57 @@
+@import "variables";
+
 body {
   margin: 0;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  color: $black-color;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $border-day-size;
+
+  padding: 10px;
+  width: ($day-size + $border-day-size) * 7;
+      
+  &__day {
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      width: $day-size;
+      height: $day-size;
+      background-color: #eee;
+      border: 1px solid $black-color;
+      transition: all 0.5s ease-in-out;
+
+
+      &:hover {
+          background-color: #FFBFCB;
+          cursor: pointer;
+          transform: translateY(-20px);
+      }
+  }
+}
+
+
+@for $days from 1 through 31 {
+  .calendar__day:nth-child(#{$days})::before {
+    content: '#{$days}';
+  }
+}
+
+@for $days from 28 through 31 {
+  .calendar--mounth-lenght-#{$days} .calendar__day:nth-child(n + #{$days + 1}) {
+    display: none;
+  }
+}
+
+@each $day-name, $day-value in $days-of-week {
+  .calendar--start-day-#{$day-name} .calendar__day:first-child {
+    margin-left: ($day-size * $day-value) + ($border-day-size * $day-value);
+  }
 }
