--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,12 +29,12 @@ body {
 
     width: $day-size;
     height: $day-size;
-    background-color: #eee;
+    background-color: $bg-color;
     border: 1px solid $black-color;
     transition: all 0.5s ease-in-out;
 
     &:hover {
-      background-color: #ffbfcb;
+      background-color: $bg-hover-color;
       cursor: pointer;
       transform: translateY(-20px);
     }
