--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,8 @@
 $day-size: 100px;
 $border-day-gap: 1px;
 $black-color: #000;
+$bg-color: #eee;
+$bg-hover-color: #ffbfcb;
 $days-of-week: (
   mon: 0,
   tue: 1,
