--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,16 +10,16 @@ body {
 
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-  color: $text-color;
+  color: $black-color;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-
   gap: $border-day-gap;
+
   padding: 10px;
-  max-width: ($day-size * 7 + $border-day-gap * 6);
+  width: ($day-size * 7 + $border-day-gap * 6);
 
   &__day {
     box-sizing: border-box;
@@ -27,27 +27,17 @@ body {
     justify-content: center;
     align-items: center;
 
-    height: 100px;
-    width: 100px;
-    background-color: #eee;
-    border: 1px solid $text-color;
-
-    cursor: pointer;
-    transition-duration: 500ms;
+    width: $day-size;
+    height: $day-size;
+    background-color: $bg-color;
+    border: 1px solid $black-color;
+    transition: all 0.5s ease-in-out;
 
     &:hover {
-      background-color: #ffbfcb;
+      background-color: $bg-hover-color;
+      cursor: pointer;
       transform: translateY(-20px);
     }
-  }
-
-  .calendar__day::before {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 100px;
-    width: 100px;
   }
 }
 
@@ -55,29 +45,30 @@ body {
   .calendar__day:nth-child(#{$days})::before {
     content: '#{$days}';
   }
+}
 
-  @for $days from 28 through 31 {
-    .calendar--month-length-#{$days}
-      .calendar__day:nth-child(n + #{$days + 1}) {
-      display: none;
-    }
+@for $days from 28 through 31 {
+  .calendar--month-length-#{$days} .calendar__day:nth-child(n + #{$days + 1}) {
+    display: none;
   }
+}
 
-  @each $day-name, $day-value in $days-of-week {
-    .calendar--start-day-#{$day-name} .calendar__day:first-child {
-      margin-left: ($day-size * $day-value) + ($border-day-gap * $day-value);
-    }
+@each $day-name, $day-value in $days-of-week {
+  .calendar--start-day-#{$day-name} .calendar__day:first-child {
+    margin-left: ($day-size * $day-value) + ($border-day-gap * $day-value);
   }
 }
 
 $day-size: 100px;
 $border-day-gap: 1px;
-$text-color: #000;
+$black-color: #000;
+$bg-color: #eee;
+$bg-hover-color: #ffbfcb;
 $days-of-week: (
   mon: 0,
   tue: 1,
   wed: 2,
-  thur: 3,
+  thu: 3,
   fri: 4,
   sat: 5,
   sun: 6,
