added variables file

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,4 @@
-$width-box: 100px;
-$gap: 1px;
-$week-column: 7;
-$days-of-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+@import './utils/variables';
 
 body {
   display: flex;
