--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,7 +18,7 @@
   &__space {
     display: flex;
     flex-wrap: wrap;
-    gap: $gap;
+    gap: $base-gap;
   }
 
   &__day {
@@ -28,7 +28,7 @@
     height: $square-size;
     width: $square-size;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid $border-color;
     background-color: $square-color;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
