--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,87 @@
+$size: 100px;
+$content-day: '';
+$start-days: (
+  'mon': 0,
+  'tue': $size + 1px,
+  'wed': $size * 2 + 2px,
+  'thu': $size * 3 + 3px,
+  'fri': $size * 4 + 4px,
+  'sat': $size * 5 + 5px,
+  'sun': $size * 6 + 6px,
+);
+$month-length: (
+  '28': 28,
+  '29': 29,
+  '30': 30,
+  '31': 31,
+);
+
+@mixin flex($flex, $justify-content, $align-items) {
+  display: $flex;
+  justify-content: $justify-content;
+  align-items: $align-items;
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: $content-day + #{$i};
+  }
+}
+
+@each $day, $margin in $start-days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: #{$margin};
+    }
+  }
+}
+
+@each $length, $num in $month-length {
+  .calendar--month-length-#{$length} {
+    @for $i from 1 through $num {
+      .calendar__day {
+        visibility: hidden;
+      }
+
+      .calendar__day:nth-child(#{$i}) {
+        visibility: visible;
+      }
+    }
+  }
+}
+
 body {
+  @include flex(flex, center, center);
+
+  flex-direction: column;
+  height: 100vh;
   margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  @include flex(flex, left, center);
+
+  max-width: ($size * 7) + 26px;
+  padding: 10px;
+  gap: 1px;
+  flex-wrap: wrap;
+
+  &__day {
+    @include flex(flex, center, center);
+
+    background-color: #eee;
+    box-sizing: border-box;
+    width: $size;
+    height: $size;
+    border: 1px solid black;
+  }
+
+  &__day:hover {
+    cursor: pointer;
+    background-color: #FFBFCB;
+    transform: translate(0, -20px);
+    transition-duration: .5s;
+  }
 }
