--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,6 @@ $gap-size: 1px;
 $number-in-row: 7;
 $row-gap: (($number-in-row)-1) * $gap-size;
 $row-width: $number-in-row * $step + $row-gap;
-$month-length: 31;
 $week-days: (
   'mon': 1,
   'tue': 2,
@@ -13,7 +12,12 @@ $week-days: (
   'sat': 6,
   'sun': 7,
 );
-$start-day: 'sun';
+$month-lengths: (
+  28: 28,
+  29: 29,
+  30: 30,
+  31: 31,
+);
 
 .body {
   justify-content: center;
@@ -32,6 +36,7 @@ $start-day: 'sun';
   gap: $gap-size;
   max-width: $row-width;
   flex-wrap: wrap;
+
   &__day {
     display: none;
     background-color: #eee;
@@ -55,22 +60,29 @@ $start-day: 'sun';
       transform: translate(0, -20px);
     }
 
-    @for $i from 1 through $month-length {
-      &:nth-of-type(#{$i}) {
-        display: block;
-      }
-    }
     @for $i from 1 through 31 {
       &:nth-of-type(#{$i})::before {
         content: '#{$i}';
       }
     }
+  }
 
-    &:nth-of-type(1) {
-      @each $day, $value in $week-days {
-        @if $day == $start-day {
-          margin-left: $step * (($value)-1) + $gap-size * (($value)-1);
+  @each $month-length, $days in $month-lengths {
+    &--month-length-#{$month-length} {
+      @for $i from 1 through $days {
+        .calendar__day:nth-child(#{$i}) {
+          display: block;
         }
+      }
+    }
+  }
+
+  @each $day, $value in $week-days {
+    &--start-day-#{$day}:first-child {
+      .calendar__day:first-child {
+        margin-left: calc(
+          #{$step} * (#{$value} - 1) + #{$gap-size} * (#{$value} - 1)
+        );
       }
     }
   }
