--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: $days-gap;
-  width: $calendar-item-box-size * $calendar-item-columns + $days-gap * 6;
+  width: ($calendar-item-size + $calendar-gap) * $calendar-item-columns;
 
   &__day {
     box-sizing: border-box;
@@ -25,7 +25,7 @@
     border: 1px solid #000;
     width: $calendar-item-box-size;
     height: $calendar-item-box-size;
-    transition: transform 500ms;
+    transition: all 0.5s ease 0s;
 
     @for $number-of-days from 1 through 31 {
       &:nth-child(#{$number-of-days})::before {
