--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
-$calendar-item-box-size: 100px;
+$calendar-item-size: 100px;
+$calendar-item-box-size: $calendar-item-size + 2px;
 $calendar-item-bg-color: #eee;
 $calendar-item-hover-color: #ffbfcb;
 $number-of-days: 31;
