--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: $days-gap;
-  width: ($calendar-item-size + $calendar-gap) * $calendar-item-columns;
+  width: ($calendar-item-box-size + $calendar-gap) * $calendar-item-columns;
 
   &__day {
     box-sizing: border-box;
