finish my task1

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,11 +9,13 @@ $gap-between: 1px;
 $start-day-modifiers: (mon, tue, wed, thu, fri, sat, sun);
 $month-length-modifiers: (28, 29, 30, 31);
 $box-with-gap: $day-size + $gap-between;
-$hover-color-day: pink;
-$days-of-the-week: 'mon' 0,
+$hover-color-day: #ffbfcb;
+$days-of-the-week: (
+  'mon' 0,
   'tue' ($box-with-gap),
   'wed' ($box-with-gap * 2),
   'thu' ($box-with-gap * 3),
   'fri' ($box-with-gap * 4),
   'sat' ($box-with-gap * 5),
-  'sun' ($box-with-gap * 6);
+  'sun' ($box-with-gap * 6)
+);
