--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,8 @@
 @use 'sass:list';
-@import 'variables';
+
+$columns: 7;
+$gap: 1px;
+$day-size: 100px;
 
 .page {
   font-family: Arial, sans-serif;
