--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,7 +62,7 @@ $day-size: 100px;
   @each $day in $days {
     $index: list.index($days, $day) - 1;
     &--start-day-#{$day} .calendar__day:nth-child(1) {
-      margin-left: $index * ($day-size + 1px);
+      margin-left: $index * ($day-size + $gap);
     }
   }
 }
