add task solution2

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 $daySize: 100px;
 $countDays: 31;
 $gap: 1px;
-$calendarWidth: $daySize * 7 + 10;
+$calendarWidth: ($daySize * 7) + 10;
 $daysOfWeek: ('mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
 
 body {
@@ -59,7 +59,7 @@ body {
 
   @each $name, $value in $daysOfWeek {
     .calendar--start-day-#{$name} .calendar__day:first-child {
-      margin-left: ($value * ($daySize + $gap)) - ($daySize + $gapValue);
+      margin-left: ($value * ($daySize + $gap)) - ($daySize + $gap);
     }
   }
 }
